--- a/app/src/main/res/layout/activity_haifares.xml
+++ b/app/src/main/res/layout/activity_haifares.xml
@@ -5,109 +5,124 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    tools:context=".TelbarsActivity">
+    tools:context=".haifares">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ImageView
-            android:id="@+id/alabar"
+            android:id="@+id/yanyanchineserestauranthaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:srcCompat="@drawable/alabartelaviv" />
+            app:srcCompat="@drawable/yanyanchineserestauranthaifa" />
 
         <TextView
-            android:id="@+id/alabartext"
             android:textAlignment="center"
+            android:id="@+id/yanyanhaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView" />
 
         <ImageView
-            android:id="@+id/billiejeanbar"
+            android:id="@+id/douzanhaifa"
             android:layout_width="match_parent"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/billiejeanbar" />
+            app:srcCompat="@drawable/douzanhaifa" />
 
         <TextView
             android:textAlignment="center"
-            android:id="@+id/billiejeanbartext"
+            android:id="@+id/douzanhaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="location" />
 
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/imperialcocktailbartelaviv"
+            android:id="@+id/haledadawihaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/imperialcocktailbartelaviv" />
+            app:srcCompat="@drawable/haledadawihaifa" />
 
         <TextView
-            android:textAlignment="center"
-            android:id="@+id/imperialcocktailbartelavivtext"
+            android:id="@+id/haledadawihaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:gravity="center"
+            android:textAlignment="center"
+            android:text="location" />
 
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/limalimabar"
+            android:id="@+id/luxhaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/limalimabartelaviv" />
+            app:srcCompat="@drawable/luxhaifa" />
 
         <TextView
-            android:textAlignment="center"
-            android:id="@+id/limalimatext"
+            android:id="@+id/luxhaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="location"
+            android:textAlignment="center"/>
 
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/minzabar"
+            android:id="@+id/minnatomeihaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/minzarbartelaviv" />
+            app:srcCompat="@drawable/minnatomeihaifa" />
 
         <TextView
             android:textAlignment="center"
-            android:id="@+id/minzabartext"
+            android:id="@+id/minnatomeihaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="location" />
 
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/queenbar"
+            android:id="@+id/rafaellohaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/queenbartelaviv" />
+            app:srcCompat="@drawable/raffaellohaifa" />
 
         <TextView
-            android:textAlignment="center"
-            android:id="@+id/queenbartext"
+            android:id="@+id/rafaellohaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="location"
+            android:textAlignment="center"/>
 
         <ImageView
-            android:layout_gravity="center"
-            android:id="@+id/lizmanbar"
+            android:id="@+id/venyabistrohaifa"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/litzmanbartelaviv" />
+            app:srcCompat="@drawable/venyabistrohaifa" />
 
         <TextView
-            android:textAlignment="center"
-            android:id="@+id/litzmanbartext"
+            android:id="@+id/venyabistrohaifatext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:text="location"
+            android:textAlignment="center"/>
+
+        <ImageView
+            android:id="@+id/vivinohaifa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/vivinohaifa" />
+
+        <TextView
+            android:id="@+id/vivinohaifatext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="location"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/goback4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="go back" />
     </LinearLayout>
 </ScrollView>
